# hourly-tracker

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build-exe.yml  release.yml  tag.yml
requirements/: base.txt
scripts/: bump_versions.sh  generate_ui_files.sh
src/main/python/: login_time.py  main.py  ui_form.py
src/main/resources/: main_window.ui  untitled.ui
